src/App.css
.App {
  text-align: center;
  display: flex;
  flex-wrap: wrap;
  height: 100%;
}

#rec {
  margin-top: 45px;
}


.searchPart{
  background: rgba(0, 0, 0, 0.7);
  flex:5;
  min-height: 100vh;
  z-index:0;
  color:white;
}


#NUdiv, #soundclouddiv {
  margin-top: 10%;
  height:100%;
}

.spotifydiv {
  height:100%;
}


.SpotifyPlayer {
  margin-top: 10%;
}

.RecPart{
  z-index:1;
  flex:3;
  min-height: 100vh;
  background-color:rgba(0, 0, 0, 0.7);;
}

.iframe{
  
  overflow: hidden;
  margin-top: 20px;
  height: 300px;
  width: 90%;
  /* border: 1px solid white; */

}

.platformIcon:hover, .spIcon:hover {
  cursor:pointer;
}


.platformIcon{
  height: 70px;
  margin-left: 20px;
}
 .spIcon{
  height: 75px;
}


.greyContainer{
 
  background-color: #adadad;
  border-radius: 20px;
  margin-left: 25px;
  margin-right: 25px;
  height:80%;
  margin-top: -25px;
}

#select_activity {
  list-style-type: none;
  text-rendering: auto;
    color: initial;
    letter-spacing: normal;
    word-spacing: normal;
    text-transform: none;
    text-indent: 0px;
    text-shadow: none;
    display: inline-block;
    text-align: start;
    margin: 0em;
    font: 400 11px system-ui;
}

#logo {
  position:absolute;
  left:0;
  top:0;
}

#app_title {
  margin-top: 250px;
  margin-bottom:2px;
}

.h6 {
  margin-top: 0px;
}

/*.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 40vmin;
}*/

#app_header {
  background-color: #282c34;
  /*min-height: 100vh;*/
  height:450px;
  display: flex;
  flex-direction: column;
  align-items: center;
  /*justify-content: center;*/
  font-size: calc(10px + 2vmin);
  color: white;
}

/*.App-link {
  color: #61dafb;
}*/

/*@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}
*/
#add_activity {
  margin-top: 50px;
  background-color: #ffffff;
  width: 50%;
  height:50px;
  align-items: center;
  text-align:center;
}

#generate_music {
  margin-top: 50px;
  height:50px;
  width:10%;
  background-color: green;
  color:#ffffff;
  font-size:15px;
  font-weight: bold;
}

.videoTag {
  position: fixed;
  right: 0;
  bottom: 0;
  min-width: 100%; 
  min-height: 100%;
  opacity:0.4;
  z-index: -1;
}

#form {
  height:50px;
}



/**************************************************************************/
/*!
 * IE10 viewport hack for Surface/desktop Windows 8 bug
 * Copyright 2014-2015 Twitter, Inc.
 * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
 */
@-ms-viewport{width:device-width}@-o-viewport{width:device-width}@viewport{width:device-width}.hll{background-color:#ffc}.c{color:#999}.err{color:#A00;background-color:#FAA}.k{color:#069}.o{color:#555}.cm{color:#999}.cp{color:#099}.c1{color:#999}.cs{color:#999}.gd{background-color:#FCC;border:1px solid #C00}.ge{font-style:italic}.gr{color:red}.gh{color:#030}.gi{background-color:#CFC;border:1px solid #0C0}.go{color:#AAA}.gp{color:#009}.gu{color:#030}.gt{color:#9C6}.kc{color:#069}.kd{color:#069}.kn{color:#069}.kp{color:#069}.kr{color:#069}.kt{color:#078}.m{color:#F60}.s{color:#d44950}.na{color:#4f9fcf}.nb{color:#366}.nc{color:#0A8}.no{color:#360}.nd{color:#99F}.ni{color:#999}.ne{color:#C00}.nf{color:#C0F}.nl{color:#99F}.nn{color:#0CF}.nt{color:#2f6f9f}.nv{color:#033}.ow{color:#000}.w{color:#bbb}.mf{color:#F60}.mh{color:#F60}.mi{color:#F60}.mo{color:#F60}.sb{color:#C30}.sc{color:#C30}.sd{color:#C30;font-style:italic}.s2{color:#C30}.se{color:#C30}.sh{color:#C30}.si{color:#A00}.sx{color:#C30}.sr{color:#3AA}.s1{color:#C30}.ss{color:#FC3}.bp{color:#366}.vc{color:#033}.vg{color:#033}.vi{color:#033}.il{color:#F60}.css .nt+.nt,.css .o,.css .o+.nt{color:#999}
/* ... */

